@@ -7,6 +7,7 @@ import static org.mockito.Mockito.when;
 
 import com.greg.moviereviews.domain.exception.FunctionalException;
 import com.greg.moviereviews.domain.exception.FunctionalException.MovieAlreadyExistsException;
+import com.greg.moviereviews.domain.exception.TechnicalException.DatabaseException;
 import com.greg.moviereviews.domain.model.Movie;
 import com.greg.moviereviews.domain.port.obtain.IObtainMovie;
 import java.util.List;
@@ -25,7 +26,7 @@ class MovieServiceTest {
   @InjectMocks private MovieService movieService;
 
   @Test
-  void shouldGetMovieByTitle() {
+  void shouldGetMovieByTitle() throws DatabaseException {
     // Given
     val title = "title";
     val movie = Movie.builder().title(title).build();
@@ -39,7 +40,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldNotGetMovieByTitle_whenDoesNotExist() {
+  void shouldNotGetMovieByTitle_whenDoesNotExist() throws DatabaseException {
     // Given
     val title = "unknownTitle";
     val movie = Movie.builder().title(title).build();
@@ -53,7 +54,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldReturnTrueWhenDeleteMovieByTitleIsOK() {
+  void shouldReturnTrueWhenDeleteMovieByTitleIsOK() throws DatabaseException {
     // Given
     val title = "title";
     when(iObtainMovie.deleteMovie(title)).thenReturn(1);
@@ -66,7 +67,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldReturnFalseWhenDeleteMovieByTitleNotOk() {
+  void shouldReturnFalseWhenDeleteMovieByTitleNotOk() throws DatabaseException {
     // Given
     val title = "title";
     when(iObtainMovie.deleteMovie(title)).thenReturn(0);
@@ -79,7 +80,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldReturnTrueWhenUpdateMovieIsOk() {
+  void shouldReturnTrueWhenUpdateMovieIsOk() throws DatabaseException {
     // Given
     val movie = Movie.builder().title("title").build();
     when(iObtainMovie.updateMovie(movie)).thenReturn(1);
@@ -92,7 +93,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldReturnFalseWhenUpdateMovieNotOk() {
+  void shouldReturnFalseWhenUpdateMovieNotOk() throws DatabaseException {
     // Given
     val movie = Movie.builder().title("title").build();
     when(iObtainMovie.updateMovie(movie)).thenReturn(0);
@@ -105,7 +106,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldCreateMovieWhenMovieDoesNotExist() throws FunctionalException {
+  void shouldCreateMovieWhenMovieDoesNotExist() throws FunctionalException, DatabaseException {
     // Given
     val title = "title";
     val author = "author";
@@ -121,7 +122,7 @@ class MovieServiceTest {
   }
 
   @Test
-  void shouldThrowMovieAlreadyExistsExceptionWhenMovieAlreadyExists() {
+  void shouldThrowMovieAlreadyExistsException_whenMovieAlreadyExists() throws DatabaseException {
     // Given
     val title = "title";
     val author = "author";
@@ -131,6 +132,6 @@ class MovieServiceTest {
     // Then
     assertThatThrownBy(() -> movieService.createMovie(movie))
         .isInstanceOf(MovieAlreadyExistsException.class)
-        .hasMessageContaining("Movie %s with title %s already exists".formatted(title, author));
+        .hasMessageContaining(String.format("Movie %s by %s already exists", title, author));
   }
 }
